<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient"
    tools:context=".CreateSessionActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/lato_bold"
        android:letterSpacing="0.2"
        android:text="@string/createSessionPage_title"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/createSessionPage_name"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/inputUserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/createSessionPage_namePlaceholder"
        android:inputType="text"
        android:text=""
        android:textColor="@color/du_color_1"
        android:textColorHint="@color/du_color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/createSessionPage_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/du_color_1"
        android:fontFamily="@font/spartan_bold"
        android:onClick="handleCreateSession"
        android:text="@string/createSessionPage_button"
        android:textColor="@color/du_color_8"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/createSessionPage_passwordPlaceholder"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/du_color_1"
        android:textColorHint="@color/du_color_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>