<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient"
    tools:context=".LogInPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="149dp"
        android:fontFamily="@font/lato_bold_italic"
        android:letterSpacing="0.05"
        android:text="@string/logInPage_title"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginBottom="539dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/logInPage_password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/du_color_1"
        android:fontFamily="@font/spartan_bold"
        android:onClick="handleContinue"
        android:text="@string/logInPage_button"
        android:textColor="@color/du_color_8"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/createSessionPage_passwordPlaceholder"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/du_color_1"
        android:textColorHint="@color/du_color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/userNameShowCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/lato_bold_italic"
        android:letterSpacing="0.05"
        android:text="@string/logInPage_name"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>